--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,33 @@
     "start:prod": "node dist/app.js"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/helmet": "^4.0.0",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.9",
+    "@types/winston": "^2.4.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
-    "reflect-metadata": "^0.1.13"
+    "node-device-detector": "^2.0.16",
+    "nodemailer": "^6.9.4",
+    "reflect-metadata": "^0.1.13",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
