--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       - mern-app
     restart: unless-stopped
   mongodb:
-    image: "mongo"
+    image: "mongo:4.4.18"
     ports:
       - "27017:27017"
     networks:
