--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     volumes:
       - mongo-data:/data/db
   redis:
-    image: redis:latest
+    image: redis
     ports:
       - "6379:6379"
     networks:
